@@ -6,6 +6,7 @@ Version 2.2.0
 * Improved support for FAKE
 * Verify input files do not have DOS end of line characters
 * Populate difxLabel in difxio->.calc and in .joblist
+* Generate systematic threadId
 
 Version 2.1.0
 ~~~~~~~~~~~~~
